# run-all-now

./: .gitignore  CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  index.d.mts  index.d.ts  index.js  index.mjs  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark.yml  bug_report.yml  compatibility_gap.yml  config.yml
.github/workflows/: ci.yml  publish.yml
.pi/agents/: benchmark-agent.md  content-agent.md  dx-agent.md  npm-compatibility-agent.md  research-agent.md  rust-core-agent.md
assets/: benchmark.json  package-metrics.json
bench/: README.md  flamegraph.sh  lib.sh  memory.sh  setup-fixtures.sh  startup.sh  stress.sh
bench/fixtures/: package.json  task.mjs
docs/: architecture.md  benchmark-results.html  benchmark-roadmap.md  compatibility-matrix.md  implementation-roadmap.md  launch-checklist.md  performance-hypotheses.md  presentation.html  publishing.md  research-notes.md  subagents.md
examples/: README.md
lib/: resolve-binary.js
marketing/: README.md  demo.tape  launch-tweets.md  presentation.html
scripts/: benchmark.js  prepare-platform-package.js  render-comparison-image.js
src/: cli.rs  glob.rs  json.rs  main.rs  package.rs  runner.rs  shell.rs
test/: run-all-now.test.js
