[package]
name = "run-all-now"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Ultra-fast native replacement for npm-run-all"
repository = "https://github.com/ocodista/run-all-now"
keywords = ["npm-run-all", "scripts", "parallel", "monorepo", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
