[package]
name = "run-all-now"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "Zero-dependency Rust-powered npm-run-all replacement."
license = "MIT"
repository = "https://github.com/ocodista/run-all-now"
keywords = ["npm", "scripts", "parallel", "runner", "rust"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
